--- a/packages/components/base/src/table/Th/index.module.scss
+++ b/packages/components/base/src/table/Th/index.module.scss
@@ -21,4 +21,5 @@
 .content {
   display: inline-flex;
   align-items: center;
+  vertical-align: middle;
 }
